# KPI-SOC

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605270001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: dashboards.py  demo.py  integrations.py  kpis.py  router.py  tables.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: base.py  dashboard.py  dynamic_table.py
backend/app/schemas/: dashboard.py  dynamic_table.py  integration.py  kpi.py
backend/app/services/: demo_seed.py  kpi_engine.py  path_mapping.py  sekoia_client.py  table_validation.py
backend/tests/: test_kpi_engine.py
docs/: architecture.md  product-brief.md  schema_sekoia.json
env/: .env.dev.example  .env.preview.example  .env.prod.example  .env.test.example
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json
frontend/src/components/: DataGrid.tsx  KpiPanel.tsx
frontend/src/pages/: App.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css
frontend/src/types/: api.ts
infra/nginx/: default.conf
scripts/: dev.sh  prod-smoke.sh  test.sh
