[project]
name = "kpi-soc-backend"
version = "0.1.0"
description = "FastAPI backend for KPI-SOC"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.111.0",
  "pydantic-settings>=2.3.4",
  "psycopg[binary]>=3.2.1",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
